[package]
name = "hrdf-routing-engine"
version = "0.4.1"
edition = "2024"

license-file = "LICENSE"
description = "Public transport routing engine based on Swiss HRDF data."
repository = "https://github.com/florianburgener/hrdf-routing-engine"
authors = ["Florian Burgener"]

[dependencies]
axum = "0.8.3"
bincode = { version = "2.0.1", features = ["serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.5.35", features = ["derive"] }
contour = "0.13.1"
csv = { version = "1.3.1", optional = true}
geo = "0.30.0"
geojson = "0.24.2"
hrdf-parser = "0.5.1"
kd-tree = "0.6.0"
log = "0.4.22"
rayon = "1.10.0"
reqwest = "0.12.15"
rustc-hash = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
simple_logger = "5.0.0"
simple-tqdm = {version = "0.2.0", features = ["rayon"], optional = true}
strum = "0.27.1"
strum_macros = "0.27.1"
svg = { version = "0.18.0", optional = true}
test-log = "0.2.16"
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["cors"] }
typenum = "1.17.0"
url = "2.5.4"
zip = { version = "4.0.0", optional = true }

# For -Zminimal-versions
native-tls = "0.2.14"
flate2 = "1.0.35"

[features]
default = ["svg", "hectare"]
svg = ["dep:svg"]
hectare = ["dep:csv", "dep:zip", "dep:simple-tqdm"]

[profile.dev]
opt-level=3

[profile.release]
# lto = true
