[package]
name = "hrdf-routing-engine"
version = "0.5.0"
authors = ["Florian Burgener", "Orestis Malaspinas"]
edition = "2024"
description = "Public transport routing engine based on Swiss HRDF data."
repository = "https://github.com/florianburgener/hrdf-routing-engine"
license-file = "LICENSE"

[dependencies]
axum = "0.8.3"
bincode = { version = "2.0.1", features = ["serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.5.35", features = ["derive"] }
contour = "0.13.1"
csv = { version = "1.3.1", optional = true }
# For -Zminimal-versions
flate2 = "1.0.35"
geo = "0.30.0"
geojson = "0.24.2"
hrdf-parser = "0.5.1"
kd-tree = "0.6.0"
log = "0.4.22"
# For -Zminimal-versions
native-tls = "0.2.14"
orx-parallel = "3.1.0"
reqwest = "0.12.15"
rustc-hash = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
simple_logger = "5.0.0"
strum = "0.27.1"
strum_macros = "0.27.1"
svg = { version = "0.18.0", optional = true }
test-log = "0.2.16"
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["cors"] }
typenum = "1.17.0"
url = "2.5.4"
zip = { version = "4.0.0", optional = true }

[features]
default = ["hectare", "svg"]
hectare = ["dep:csv", "dep:zip"]
svg = ["dep:svg"]

[profile.dev]
opt-level = 3

[profile.release]
# lto = true
